kpt/eda-kpt-asset-host/host-repositories/gogs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eda-git
  namespace: "eda-assets" # kpt-set: ${EDA_NAMESPACE_ASSET_HOST}
  labels:
    eda.nokia.com/app: git
    eda.nokia.com/app-group: control-plane
spec:
  replicas: 1
  selector:
    matchLabels:
      eda.nokia.com/app: git
  template:
    metadata:
      labels:
        eda.nokia.com/app: git
        eda.nokia.com/app-group: control-plane
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: eda.nokia.com/app-group
                      operator: In
                      values:
                        - control-plane
                topologyKey: "kubernetes.io/hostname"
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: eda.nokia.com/app-group
                    operator: In
                    values:
                      - control-plane
      containers:
        - name: gogs
          image: ghcr.io/nokia-eda/adm/gogs:0.13.0 # kpt-set: ${GOGS_IMG_TAG}
          ports:
            - containerPort: 22
              name: ssh
            - containerPort: 3000
              name: http
          command: ['bash', '-c', "/init/init.sh"]
          volumeMounts:
            - name: init
              mountPath: /init
            - name: config
              mountPath: /app/gogs/custom/conf
            - name: config
              mountPath: /data/gogs/conf
            - name: user-config
              readOnly: true
              mountPath: "/var/run/eda/user-config"
            - name: eda-git-persistent-storage
              mountPath: /data
      volumes:
        - name: config
          configMap:
            name: gogs-config
            defaultMode: 0744
        - name: readme
          configMap:
            name: gogs-readme-template
            defaultMode: 0744
        - name: init
          configMap:
            name: init-script
            defaultMode: 0755
        - name: user-config
          secret:
            secretName: gogs-admin-user
        - name: eda-git-persistent-storage
          persistentVolumeClaim:
            claimName: eda-git-pv-claim
