kpt/eda-kpt-asset-host/host-repositories/gogs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eda-git
  namespace: "eda-assets" # kpt-set: ${EDA_NAMESPACE_ASSET_HOST}
  labels:
    eda.nokia.com/app: git
spec:
  type: ClusterIP # kpt-set: ${GIT_SVC_TYPE}
  ports:
  - port: 22
    name: ssh
  - port: 3000
    name: web
  selector:
    eda.nokia.com/app: git
